# SCOPE-Bench

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run_scope_baselines.sh
benchmark_results/: README.md  qwen_score_summary.json
configs/: overall.yaml
configs/datasets/: ShortVideoFull.yaml  ShortVideoSampled.yaml
configs/examples/: benchmark.yaml
configs/models/: BERT4Rec.yaml  BGCC.yaml  BM3.yaml  BPR.yaml  BeFA.yaml  CCDRec.yaml  CFDiff.yaml  CM3.yaml  COHESION.yaml  DA_MRS.yaml  DGMRec.yaml  DRAGON.yaml  DiffMM.yaml  DiffRec.yaml  DualGNN.yaml  FCF.yaml  FITMM.yaml  FREEDOM.yaml  FedAvg.yaml  FedNCF.yaml  FedRAP.yaml  FlowCF.yaml  GRCN.yaml  GRU4Rec.yaml  HM4SR.yaml  IDFREE.yaml  ItemKNNCBF.yaml  LATTICE.yaml  LGMRec.yaml  LightGCN.yaml  MENTOR.yaml  MGCN.yaml  MIG_GT.yaml  MMFedAvg.yaml  MMFedNCF.yaml  MMFedRAP.yaml  MMGCN.yaml  MVGAE.yaml  MultiVAE.yaml  NCF.yaml  (+13 more)
core/: __init__.py  config.py  model_registry.py  package_exports.py
core/base/: __init__.py  init.py  loss.py  recommender.py  trainer.py
core/benchmark/: __init__.py  options.py  reporting.py  runner.py
core/data/: __init__.py  dataloader.py  dataset.py  features.py  pipeline.py
core/evaluation/: __init__.py  evaluator.py  export.py  export_contract.py  lcds.py  ranking.py  topk_kernel.py
core/federated/: __init__.py  aggregator.py  dataloader.py  parameter_split.py  personal_state.py  trainer.py  triplet_logger.py
core/hpo/: __init__.py  engine.py  optuna_backend.py  parallel.py  parameters.py
core/runtime/: __init__.py  logger.py  monitor.py
core/sequential/: __init__.py  dataloader.py  dataset.py  evaluator.py  integration.py  recommender.py  trainer.py
core/training/: __init__.py  core.py  environment.py  factory.py  interface.py
core/utils/: __init__.py  graph.py  metrics.py  multimodal.py  recommendation.py  result.py  significance.py  training.py
datasets/: README.md
docs/: dataset_repair.md  models.md
docs/Tutorial/: 00-overview.md  01-quick-start.md  02-configuration.md  03-add-new-model.md  04-hpo.md  05-architecture.md  06-troubleshooting.md  07-benchmarking.md  08-lcds.md
models/: __init__.py
raw/: README.md
scoring/: README.md  evaluate_videos.py  prompts.py  run_qwen_full.sh  scores_jsonl_to_csv.py  summarize_scores.py
scripts/: build_short_video_text_features.py  compute_lcds_from_recommendations.py  export_test_recommendations.py  prepare_short_video.py  rebuild_short_video_fixed.py  run_benchmark.py  significance_test.py  validate_models.py  validate_short_video_bundle.py
tests/: test_lcds.py  test_paper_terminology.py  test_recommendation_json.py
(+98 files in other folders)
