[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scope-bench"
version = "0.1.0"
description = "A short-video cognitive depth evaluation benchmark"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SCOPE-Bench Team"},
]
requires-python = ">=3.8"
keywords = ["recommendation", "short-video", "multimodal", "cognitive-depth", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies (excluding torch/torchvision which vary by CUDA version)
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "PyYAML>=6.0",
    "tqdm>=4.65.0",
    "coloredlogs>=15.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
# Install torch manually first: https://pytorch.org/get-started/locally/
torch = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torch-scatter>=2.1.0",
    "torch-geometric>=2.5.0",
    "torchdiffeq>=0.2.5",
    "einops>=0.7.0",
]
multimodal = [
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    "tokenizers>=0.13.0",
    "huggingface-hub>=0.15.0",
    "open-clip-torch>=2.20.0",
    "timm>=1.0.0",
    "ftfy>=6.1.0",
]
scoring = [
    "requests>=2.31.0",
]
hpo = [
    "optuna>=4.0.0",  # >=4.0 for storages.journal.JournalFileBackend
    "hyperopt>=0.2.7",
    "ray[tune]>=2.0.0",
]
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "plotly>=5.14.0",
    "wandb>=0.15.0",
    "tensorboard>=2.13.0",
    "umap-learn>=0.5.0",
]
dev = [
    "pytest>=7.3.0",
    "thop>=0.1.0",
]
all = [
    "scope-bench[torch,multimodal,scoring,hpo,viz,dev]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "models*", "configs*"]

[tool.setuptools.package-data]
"configs" = ["**/*.yaml", "**/*.json"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
norecursedirs = ["NexusRec-main"]
filterwarnings = [
    "ignore::pytest.PytestConfigWarning",
    "ignore:Argument ``constant_liar`` is an experimental feature.*",
    "ignore:`torch_geometric.distributed` has been deprecated.*:DeprecationWarning",
]
